@@ -1,0 +1,23 @@
+/*
+ * Translated default messages for the jQuery validation plugin.
+ * Locale: GE
+ */
+jQuery.extend(jQuery.validator.messages, {
+        required: "ამ ველის შევსება აუცილებელია.",
+        remote: "გთხოვთ მიუთითოთ სწორი მნიშვნელობა.",
+        email: "გთხოვთ მიუთითოთ ელ-ფოსტის კორექტული მისამართი.",
+        url: "გთხოვთ მიუთითოთ კორექტული URL.",
+        date: "გთხოვთ მიუთითოთ კორექტული თარიღი.",
+        dateISO: "გთხოვთ მიუთითოთ კორექტული თარიღი ISO ფორმატში.",
+        number: "გთხოვთ მიუთითოთ ციფრი.",
+        digits: "გთხოვთ მიუთითოთ მხოლოდ ციფრები.",
+        creditcard: "გთხოვთ მიუთითოთ საკრედიტო ბარათის კორექტული ნომერი.",
+        equalTo: "გთხოვთ მიუთითოთ ასეთივე მნიშვნელობა კიდევ ერთხელ.",
+        accept: "გთხოვთ აირჩიოთ ფაილი კორექტული გაფართოებით.",
+        maxlength: jQuery.validator.format("დასაშვებია არაუმეტეს {0} სიმბოლო."),
+        minlength: jQuery.validator.format("აუცილებელია შეიყვანოთ მინიმუმ {0} სიმბოლო."),
+        rangelength: jQuery.validator.format("ტექსტში სიმბოლოების რაოდენობა უნდა იყოს {0}-დან {1}-მდე."),
+        range: jQuery.validator.format("გთხოვთ შეიყვანოთ ციფრი {0}-დან {1}-მდე."),
+        max: jQuery.validator.format("გთხოვთ შეიყვანოთ ციფრი რომელიც ნაკლებია ან უდრის {0}-ს."),
+        min: jQuery.validator.format("გთხოვთ შეიყვანოთ ციფრი რომელიც მეტია ან უდრის {0}-ს.")
+});
